# Library-Management-System

./: readme.md
backend/: .env  .gitignore  README.md  main.py  pyproject.toml
backend/core/: database.py  security.py
backend/model/: book_model.py  issue_model.py  user_model.py
backend/routes/: book_route.py  issue_route.py  login_route.py  user_route.py
backend/schema/: book_schema.py  issue_schema.py  user_schema.py
backend/services/: auth_service.py  book_service.py  issue_service.py  user_service.py
frontend/: README.md  package-lock.json
frontend/src/: App.js
frontend/src/pages/: AdminDashboard.jsx  auth.jsx  login.jsx  signup.jsx  studentDashboard.jsx
frontend/src/style/: auth.css  dashboard.css
frontend/src/util/: auth.js
