[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.30",
    "uvicorn>=0.48.0",
]
